files are updated

--- a/Fraud_Detection_Report.ipynb
+++ b/Fraud_Detection_Report.ipynb
@@ -4,87 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Credit Card Fraud Prevention System\n",
-    "\n",
-    "##### Motivation\n",
-    "The increasing digital transactions and sophisticated fraud techniques necessitate a robust fraud detection system, motivating this project to leverage advanced machine learning for enhanced accuracy and reliability in credit card fraud prevention.\n",
-    "\n",
-    "Our motivation stems from the desire to protect consumers from financial loss and to support financial institutions in mitigating risks associated with fraudulent transactions. By developing a comprehensive credit card fraud prevention system, we can significantly reduce the occurrence of fraud, ensuring a safer and more secure transaction environment. The project's success will not only contribute to financial security but also build greater trust in digital payment systems.\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Methodology\n",
-    "<div style=\"text-align: center;\">\n",
-    " <img src='workflow.png' width=\"700\" height=\"300\" align=\"center\">\n",
-    " <br><br>\n",
-    " End-To-End Fraud Prevention System Workflow Schema\n",
-    "</div>\n",
-    "\n",
-    "1. [Data Overview](#Data-Overview)\n",
-    "<br><br>\n",
-    "You can download the data from https://www.kaggle.com/datasets/ealtman2019/credit-card-transactions. \n",
-    "- Understanding unbalanced data and converting class into factors<br><br>\n",
-    "Content:<br><br>\n",
-    "The dataset presents an extensive collection of around 24.4 million credit card transactions, sourced from IBM's financial database. Capturing a wide spectrum of user interactions, the data provides a detailed snapshot of transaction behaviors, patterns, and potential vulnerabilities.\n",
-    "\n",
-    "2. [Data Preprocessing](#Data-Preprocessing)\n",
-    "\n",
-    "- Fixing inconsistencies and missing values to keep the data clean, and remove redundancies for accuracy.\n",
-    "\n",
-    "- [Scaling & Distributing](#Scaling-&-Distributing)\n",
-    "\n",
-    "3. [Exploratory Data Analysis](#Exploratory-Data-Analysis)\n",
-    "\n",
-    "- [Fraud Dataset](#Fraud-Dataset)<br><br>\n",
-    "    - [Card Distribution](#Card-Distribution)<br>\n",
-    "\n",
-    "    - [Time Distribution](#Time-Distribution)<br><br>\n",
-    "    *Time Variation*: The distribution of fraud cases displays distinct time variations\n",
-    "        - [Year](#Year)\n",
-    "        - [Month](#Month)\n",
-    "        - [Day of Month](#Day-of-Month)\n",
-    "        - [Day of Week](#Day-of-Week)\n",
-    "        - [Hour](#Hour)\n",
-    "\n",
-    "    - [Amount Distribution](#Amount-Distribution)<br>\n",
-    "    \n",
-    "    - [Geographical Distribution](#Geographical-Distribution)<br>\n",
-    "        - [State](#State)<br>\n",
-    "        - [City](#City)<br>\n",
-    "\n",
-    "    - [Transaction Method](#Transaction-Method)<br><br>\n",
-    "    *Transaction Amount*: Fraud is predominantly observed in transactions of smaller values<br>\n",
-    "\n",
-    "    - [Checking Outliers](#Checking-Outliers)<br>\n",
-    "\n",
-    "4. [ML Model Optimization](#ML-Model-Optimization)\n",
-    "\n",
-    "    Implementing Logistic Regression on three sampling methods which are undersampling, oversampling and SMOTE<br><br>\n",
-    "    Improve Logistic Results using Decision Tree & Random Forest on SMOTE<br><br>\n",
-    "    Implementing ANN (Artificial Neural Network)<br><br>\n",
-    "    Evaluation of model results using Performance Metrics (Recall, Precision and F1score, AUC-ROC)<br><br>\n",
-    "    Displaying Performance Reports<br><br>\n",
-    "\n",
-    "5. [Insights](#Insights)\n",
-    "\n",
-    "    Exploratory Data Analysis showed that some variables have significant impact on the fraud rate such as time, amount and transaction method, so I incorporated them into the predictive models.<br>\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Report"
+    "### Credit Card Fraud Prevention System Model Comparion\n"
    ]
   },
   {
